# LavaLyrics

./: .gitignore  CMakeLists.txt  README.md  bad.lrc  build.ps1  build.py  dev.py  test.lrc  test_downloader_ffmpeg.py  test_internal_cli.py  test_internal_cli_download.py  test_manual_song.py  test_manual_song_with_init.py  test_oembed.py  test_scrape_spotify.py  test_spotify_public.py  test_ytdlp.py
LavaLyricsProjects/: VideoTiktok.lavalyrics
backend/: LavaLyrics.spec  main.py  spotify_extractor.py  video_processor.py
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/LavaLyrics_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/LavaLyrics_autogen/UVLADIE3JM/: moc_downloader_bridge.cpp  moc_downloader_bridge.cpp.d  moc_lyrics_loader.cpp  moc_lyrics_loader.cpp.d  moc_media_player_engine.cpp  moc_media_player_engine.cpp.d  moc_project_manager.cpp  moc_project_manager.cpp.d  moc_timeline_controller.cpp  moc_timeline_controller.cpp.d  moc_video_exporter.cpp  moc_video_exporter.cpp.d
build-release/LavaLyrics_autogen/VLDSMZLXNG/: qrc_qml.cpp
client/: app.js  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/components/: ExportModal.jsx  ExportProgressModal.jsx  FiltersPanel.jsx  ImportAudioModal.jsx  LowerLeftTabs.jsx  MissingMediaModal.jsx  PreviewPanel.jsx  ResizableLayout.jsx  Sidebar.jsx  SuccessModal.jsx  Timeline.jsx
client/src/hooks/: usePolling.js  usePreview.js  useTimeline.js
client/src/screens/: EditorScreen.jsx  IntroScreen.jsx  ProgressScreen.jsx
client/src/store/: useAppStore.js
client/src/styles/: editor.css  index.css  modals.css
frontend/: index.html  style.css
server/: LavaLyrics.spec  main.py  spotify_extractor.py  video_processor.py
src/: downloader_bridge.cpp  downloader_bridge.h  lyrics_loader.cpp  lyrics_loader.h  main.cpp  media_player_engine.cpp  media_player_engine.h  project_manager.cpp  project_manager.h  timeline_controller.cpp  timeline_controller.h  video_exporter.cpp  video_exporter.h
src/qml/: main.qml
